--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/Users/alexey/Library/Application Support/Postgres/var-13
-spring.datasource.username = alexey
-spring.datasource.password = psql
+spring.datasource.url = jdbc:postgresql://localhost:5432/customers
+spring.datasource.username = postgres
+spring.datasource.password
 
 spring.datasource.schema=classpath*:schema.sql
 
-
-# Я запускаю Postgres.app
 
 
