--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:postgresql://localhost:5432/customers
-spring.datasource.username = postgres
-spring.datasource.password
+spring.datasource.username = alexey
+spring.datasource.password = pass
 
 spring.datasource.schema=classpath*:schema.sql
 
