--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/customers
 spring.datasource.username=alexey
 spring.datasource.password=123
 
+#spring.datasource.initialization-mode=always
+
 spring.datasource.schema=classpath*:schema.sql
 
 
